--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 
 <RadzenText Text="Main log" />
-<EventConsole @ref="ConsoleMain" />
+<EventConsole @ref="_consoleMain" />
 
 <RadzenText Text="FFMPEG log" />
-<EventConsole @ref="ConsoleFfmpeg" />
+<EventConsole @ref="_consoleFfmpeg" /> 
