--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -19,14 +19,15 @@
     </RadzenBody>
     <RadzenFooter>
         <RadzenStack Orientation="Orientation.Horizontal">
-            <RadzenProgressBarCircular ProgressBarStyle="ProgressBarStyle.Secondary" Value="100" ShowValue="false" 
-            Mode="ProgressBarMode.Indeterminate" AriaLabel="Processing" Visible=@Comm.Status.IsRunning />
-            <RadzenBadge BadgeStyle="BadgeStyle.Base" Text=@Comm.Status.Status />
-                <RadzenText Text=@($"Last file: {Comm.Status.Filename}") />
-                <RadzenText Text=@($"Log: {Comm.Status.LogMain}") />
-                <RadzenText Text=@($"Log FFMPEG: {Comm.Status.LogFfmpeg}") />
+            <div style="width:200px">
+            <RadzenProgressBarCircular ProgressBarStyle="ProgressBarStyle.Secondary" Value="100" ShowValue="false"
+                                       Mode="ProgressBarMode.Indeterminate" AriaLabel="Processing" Visible=@Comm.Status.IsRunning.Value />
+            </div>
+            <RadzenBadge BadgeStyle="BadgeStyle.Base" Text=@Comm.Status.Status.Value />
             <RadzenStack Orientation="Orientation.Vertical">
-
+                <RadzenText Text=@($"Last file: {Comm.Status.Filename.Value}") />
+                <RadzenText Text=@($"Log: {LogMain.LastLine.Value}") />
+                <RadzenText Text=@($"Log FFMPEG: {LogFfmpeg.LastLine.Value}") />
             </RadzenStack>
         </RadzenStack>
 
