--- a/Components/Pages/Videos.razor
+++ b/Components/Pages/Videos.razor
@@ -1,7 +1,24 @@
 @page "/videos"
+@using GrinVideoEncoder.Models
 
-<h3>Videos</h3>
-
-@code {
-
-}
+<RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="true" FilterMode="FilterMode.Simple" 
+AllowSorting="true" AllowVirtualization=true      AllowPaging="false" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true"
+                Data="@_videos" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single"
+                Style="height:600px" Density="Density.Compact" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive">
+    <Columns>
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Status)" Title="Status" Frozen="true" Sortable="false" Width="80px" TextAlign="TextAlign.Center">
+            <Template Context="data">
+                <RadzenIcon title=@data.StatusDisplayName IconColor=@data.StatusColor Icon=@data.StatusIcon />                
+            </Template>
+        </RadzenDataGridColumn>
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Filename)" Title="Filename" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.DirectoryPath)" Title="Directory" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.FileSizeOriginalFormatted)" Title="Size ori." SortProperty="@nameof(VideoFile.FileSizeOriginal)" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.FileSizeCompressedFormatted)" Title="Size" SortProperty="@nameof(VideoFile.FileSizeCompressed)" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.DurationFormatted)" Title="Duration" SortProperty="@nameof(VideoFile.DurationSeconds)" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Resolution)" Title="Resolution" SortProperty="@nameof(VideoFile.TotalPixels)" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.QualityRatio)" Title="Quality" FormatString="{0:F0}" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.CompressionFactor)" Title="Comp." FormatString="{0:F0}%" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Fps)" Title="FPS" />
+    </Columns>
+</RadzenDataGrid>
