--- a/Components/Widget/EventConsole.razor
+++ b/Components/Widget/EventConsole.razor
@@ -1,14 +1,13 @@
-
 <RadzenCard Variant="Variant.Outlined" class="rz-mt-4">
     <RadzenStack Orientation="Orientation.Vertical" Gap="0.1rem" @attributes=@Attributes>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.SpaceBetween">
-            <RadzenText TextStyle="TextStyle.Subtitle1" TagName="TagName.P" class="rz-m-0">Console log</RadzenText>
-            <RadzenButton Click=@OnClearClick Text="Clear console" ButtonStyle="ButtonStyle.Base" Variant="Variant.Flat" Size="ButtonSize.Small" />
+            <RadzenText TextStyle="TextStyle.Subtitle1" TagName="TagName.P" class="rz-m-0" Text=@Title />
+            <RadzenButton Click=@Clear Text="Clear console" ButtonStyle="ButtonStyle.Base" Variant="Variant.Flat" Size="ButtonSize.Small" />
         </RadzenStack>
         <RadzenStack Orientation="Orientation.Vertical" Gap="0" ID="event-console" class="rz-pt-1" Style="border-top: var(--rz-grid-cell-border); min-height: 2rem; max-height: 50rem; overflow: auto;">
-            @foreach (var message in _messages)
+            @foreach (var message in GetMessages())
             {
-                <RadzenAlert ShowIcon="false" Variant="Variant.Flat" AlertStyle="message.AlertStyle" Size="AlertSize.ExtraSmall" Shade="Shade.Lighter" AllowClose="false" Style="font-size: 0.75rem">
+                <RadzenAlert ShowIcon="false" Variant="Variant.Text" AlertStyle="message.AlertStyle" Size="AlertSize.ExtraSmall" Shade="Shade.Default" AllowClose="false" Style="font-size: 0.75rem">
                     <span Style="opacity: 0.6;">@message.Date?.ToString("HH:mm:ss.ff")</span> @message.Text
                 </RadzenAlert>
             }
