--- a/Components/Pages/ReEncode.razor
+++ b/Components/Pages/ReEncode.razor
@@ -7,8 +7,8 @@
 
 <div class="mb-3">
     <RadzenLabel Text="Quality Ratio Threshold" />
-    <RadzenNumeric @bind-Value="_threshold" TValue="double" Step="10" Style="width: 200px;" Change="LoadVideos" />
-    <RadzenButton Text=@($"Start Re-encoding {_videos.Count} videos") Click="StartReencoding" ButtonStyle="ButtonStyle.Danger" Visible=@(_videos.Count > 0) />
+    <RadzenNumeric @bind-Value="_threshold" TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
+    <RadzenButton Text=@($"Start Re-encoding {_videos.Count} videos") Click="StartReencoding" ButtonStyle="ButtonStyle.Danger" Visible=@(_videos.Count > 0) Disabled="CommunicationService.Status.IsRunning.Value" />
 </div>
 
 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="true" FilterMode="FilterMode.Simple"
