Refactor dashboard stats into dedicated component
Moved dashboard UI and logic from Index.razor to new Dashboard component for improved separation of concerns. Dashboard now displays video count, compression rate, and size stats, updating reactively from the database. Made FormatBytes public with increased precision and fixed semaphore usage in EventConsole. Improved code organization and maintainability.

--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -8,12 +8,7 @@
 <RadzenTabs RenderMode="TabRenderMode.Client">
     <Tabs>
         <RadzenTabsItem Text="Dashboard">
-            <RadzenStack>
-            <RadzenCard Style="width:300px">
-                <RadzenLabel Text="Number of videos" />
-                <RadzenBadge Text=@_nbVideos.ToString() />
-            </RadzenCard>
-            </RadzenStack>
+            <Dashboard />
         </RadzenTabsItem>
         <RadzenTabsItem Text="Main log">
             <EventConsole @ref="_consoleMain" Title="Main log" />
