--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -5,7 +5,7 @@
     <RadzenButton Icon="exit_to_app" Text="Close" Click="CloseApplication" Visible=!Comm.Status.IsRunning.Value />
 </RadzenStack>
 
-<RadzenTabs RenderMode="TabRenderMode.Client">
+<RadzenTabs RenderMode="TabRenderMode.Client" Style="height:95%; flex: 1;" >
     <Tabs>
         <RadzenTabsItem Text="Dashboard">
             <Dashboard />
