--- a/Components/Pages/ReEncode.razor
+++ b/Components/Pages/ReEncode.razor
@@ -1,30 +1,31 @@
 @page "/reencode"
 @using GrinVideoEncoder.Models
 
-<PageTitle>Re-encode Videos</PageTitle>
-
-<h3>Re-encode Videos</h3>
-
 <div class="mb-3">
     <RadzenLabel Text="Quality Ratio Threshold" />
-    <RadzenNumeric @bind-Value="_threshold" TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
-    <RadzenButton Text=@($"Start Re-encoding {_videos.Count} videos") Click="StartReencoding" ButtonStyle="ButtonStyle.Danger" Visible=@(_videos.Count > 0) Disabled="CommunicationService.Status.IsRunning.Value" />
+    <RadzenNumeric @bind-Value=ReEncode.Threshold TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
+    <RadzenButton Text=@($"Start Re-encoding {_videos.Count} videos") Click="StartReencoding" ButtonStyle="ButtonStyle.Danger" Visible=@(_videos.Count > 0) Disabled="Comm.Status.IsRunning.Value" />
 </div>
 
-<RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="true" FilterMode="FilterMode.Simple"
+<RadzenDataGrid Style="height:100%; flex: 1;" AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="true" FilterMode="FilterMode.Simple"
                 AllowSorting="true" AllowVirtualization="true" AllowPaging="false"
                 Data="@_videos" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single"
-                Style="height:600px" Density="Density.Compact" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive">
+                Density="Density.Compact" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive">
     <Columns>
-        <RadzenDataGridColumn Property="@nameof(VideoFile.Status)" Title="Status" Frozen="true" Sortable="false" Width="80px" TextAlign="TextAlign.Center">
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Status)" Title="Status" Frozen="true" Sortable="false" Width="150px" TextAlign="TextAlign.Center">
             <Template Context="data">
                 <RadzenIcon title=@data.StatusDisplayName IconColor=@data.StatusColor Icon=@data.StatusIcon />
             </Template>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn Property="@nameof(VideoFile.Filename)" Title="Filename" />
-        <RadzenDataGridColumn Property="@nameof(VideoFile.DirectoryPath)" Title="Directory" />
-        <RadzenDataGridColumn Property="@nameof(VideoFile.QualityRatioOriginal)" Title="Quality Ratio" FormatString="{0:F0}" />
-        <RadzenDataGridColumn Property="@nameof(VideoFile.DurationFormatted)" Title="Duration" SortProperty="@nameof(VideoFile.DurationSeconds)" />
-        <RadzenDataGridColumn Property="@nameof(VideoFile.Resolution)" Title="Resolution" SortProperty="@nameof(VideoFile.TotalPixels)" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Filename)" Title="Filename" MinWidth="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.DirectoryPath)" Title="Directory" MinWidth="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.FileSizeOriginalFormatted)" Title="Size ori." SortProperty="@nameof(VideoFile.FileSizeOriginal)" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.FileSizeCompressedFormatted)" Title="Size" SortProperty="@nameof(VideoFile.FileSizeCompressed)" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.DurationFormatted)" Title="Duration" SortProperty="@nameof(VideoFile.DurationSeconds)" Width="120px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Resolution)" Title="Resolution" SortProperty="@nameof(VideoFile.TotalPixels)" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.QualityRatio)" Title="Quality" FormatString="{0:F0}" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.CompressionFactor)" Title="Comp." FormatString="{0:F0}%" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.Fps)" Title="FPS" Width="100px" />
+        <RadzenDataGridColumn Property="@nameof(VideoFile.LastModified)" Title="Modif." Width="150px" />
     </Columns>
 </RadzenDataGrid>
